# hs-git-gsub

./: .gitignore  .gitmodules  LICENSE  README.md  circle.yml  hs-git-gsub.cabal  stack.yaml
.github/workflows/: benchmark.yaml  ci.yaml  lint.yaml  test.yaml
app/: Main.hs
benchmark/: Main.hs
src/: Cli.hs  Lib.hs  Types.hs
test/: Helper.hs  doctests.hs
test/Git/: GsubSpec.hs
