name: hs-git-gsub
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: MIT
maintainer: me@fujimuradaisuke.com
homepage: http://github.com/fujimura/hs-git-gsub#readme
synopsis: Initial project template from stack
description:
    Please see README.md
category: Web
author: Daisuke Fujimura

source-repository head
    type: git
    location: https://github.com/fujimura/hs-git-gsub

library
    exposed-modules:
        Lib
        Cli
        Types
    build-depends:
        base >=4.7 && <5,
        process -any,
        filepath -any,
        directory -any,
        optparse-applicative -any,
        text -any,
        temporary -any,
        bytestring -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Paths_hs_git_gsub
    ghc-options: -Wall

executable git-gsub
    main-is: Main.hs
    build-depends:
        base -any,
        hs-git-gsub -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall

test-suite hs-git-gsub-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        hspec >=2.0.0,
        mockery -any,
        directory -any,
        filepath -any,
        silently -any,
        process -any,
        interpolate -any,
        temporary -any,
        hs-git-gsub -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
test-suite doctests
    type: exitcode-stdio-1.0
    main-is: doctests.hs
    build-depends:
        base -any,
        doctest >=0.8,
        process -any
    hs-source-dirs: src test
    other-modules:
        Paths_hs_git_gsub
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind -Wall
