name:          hs-git-gsub
version:       0.1.0.0
cabal-version: >=1.10
build-type:    Simple
license:       BSD3
license-file:  LICENSE
copyright:     MIT
maintainer:    me@fujimuradaisuke.com
homepage:      http://github.com/fujimura/hs-git-gsub#readme
synopsis:      Initial project template from stack
description:   Please see README.md
category:      Web
author:        Daisuke Fujimura

source-repository head
  type:     git
  location: https://github.com/fujimura/hs-git-gsub

library
  exposed-modules:
    Cli
    Lib
    Types

  build-depends:
      base                  >=4.7 && <5
    , bytestring
    , directory
    , filepath
    , optparse-applicative
    , process
    , temporary
    , text
    , async
    , regex-tdfa
    , regex

  default-language: Haskell2010
  hs-source-dirs:   src
  other-modules:    Paths_hs_git_gsub

executable git-gsub
  main-is:          Main.hs
  build-depends:
      base
    , hs-git-gsub

  default-language: Haskell2010
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -O2

test-suite hs-git-gsub-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  build-depends:
      base
    , directory
    , filepath
    , hs-git-gsub
    , hspec        >=2.0.0
    , interpolate
    , mockery
    , process
    , silently
    , temporary

  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover
  hs-source-dirs:     test

benchmark hs-git-gsub-benchmark
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  build-depends:
      base
    , directory
    , process
    , criterion
    , hs-git-gsub

  hs-source-dirs:     benchmark
  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall